hopefully fixed header again (whitespace)

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -123,6 +123,7 @@ body {
     font-size: 20px;
     letter-spacing: 0;
     display: flex;
+    white-space: nowrap;
 }
 
 p {
